<resources>
    <string name="app_name">Playlist Maker</string>

    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="media_library">Медиатека</string>
    <string name="setting">Настройки</string>
    <string name="share_The_App">Поделится приложением</string>
    <string name="write_to_support">Написать разработчикам</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="dark">Темная тема</string>
    <string name="applicationSelection">Выбор приложения для отправки</string>
    <string name="practicum_yandex_">https://practicum.yandex.ru/android-developer/ </string>
    <string name="searchString">Поиск</string>
    <string name="nornik2019_gmail_com">nornik2019@gmail.com</string>
    <string name="playlist_maker">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="Spasibo">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="sharing">Отправить сообщение</string>
    <string name="offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="Search">Поиск</string>
    <string name="title_and_time">%s • %s</string>
    <string name="run_track">Перейти к треку</string>
    <string name="imagePoster">Изображение альбома</string>
    <string name="search_tv_update">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_btn_update_text">Обновить</string>
    <string name="search_tv_notfound_text">Ничего не нашлось</string>
    <string name="app_preference_file_name">MP_preferences</string>
    <string name="dark_mode_status_key">dark_mode_status</string>
    <string name="recent_tracks_list_key">recent_tracks_list</string>
    <string name="no_track_time_from_response">нет данных</string>
    <string name="clear_history_button">Очистить историю</string>
    <string name="search_request_status_text_if_no_results">Ничего не найдено</string>
    <string name="search_request_status_text_if_server_error">Что-то пошло не так…\nОшибка сервера</string>
    <string name="email">Email:</string>
    <string name="stores_steamcommunity_Mail_ru">stores.steamcommunity@mail.ru</string>
    <string name="Theme">Theme:</string>
    <string name="chat_to_support_theme">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="chat_to_support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="Description">Description:</string>
    <string name="Submit">Submit</string>






</resources>
