<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/container"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    tools:context=".ShareActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/ButtonStyleMain"
            android:text="@string/email"></TextView>

        <EditText
            android:id="@+id/email_chat_support"
            android:hint="@string/stores_steamcommunity_Mail_ru"
            style="@style/ChatSupport_EditText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            style="@style/ButtonStyleMain"
            android:text="@string/Theme"></TextView>

        <EditText
            style="@style/ChatSupport_EditText"
            android:id="@+id/chat_support_theme"
            android:inputType="textMultiLine"
            android:hint="@string/chat_to_support_theme"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            style="@style/ButtonStyleMain"
            android:text="@string/Description"></TextView>

        <EditText
            style="@style/ChatSupport_EditText"
            android:id="@+id/chat_support_message"
            android:inputType="textMultiLine"
            android:hint="@string/chat_to_support_message"/>

    </LinearLayout>

    <Button
        android:gravity="center"
        android:id="@+id/buttonEditText"
        style="@style/ButtonStyleSetting"
        android:text="@string/Submit"></Button>
</LinearLayout>