<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/MessageTextStyle"
            android:fontFamily="@font/ys_text_medium"
            android:text="@string/app_name"></TextView>

        <Button
            android:id="@+id/button1"
            style="@style/ButtonStyle4"
            android:text="@string/search"
            app:cornerRadius="@dimen/radius"
            app:icon="@drawable/ic_vec" />

        <Button
            android:id="@+id/button2"
            style="@style/ButtonStyle4"
            android:text="@string/media_library"
            app:cornerRadius="@dimen/radius"
            app:icon="@drawable/ic_vect" />

        <Button
            android:id="@+id/button3"
            style="@style/ButtonStyle4"
            android:text="@string/settings"
            app:cornerRadius="@dimen/radius"
            app:icon="@drawable/ic_vector" />


    </LinearLayout>
</LinearLayout>

