<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="@dimen/layout_layout_width"
        android:layout_height="@dimen/layout_Layout_height"
        android:layout_marginStart="@dimen/layout_layout_marginLeft"
        android:layout_marginTop="@dimen/layout_layout_marginTop"
        android:layout_marginEnd="@dimen/layout_layout_marginRight"
        android:background="?attr/colorOnPrimary">

        <Button
            style="@style/ButtonStyle3"
            android:id = "@+id/vector"
            android:text="@string/setting"
            app:icon="@drawable/ic_strelka" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/lists"
        android:layout_width="@dimen/relative_width"
        android:layout_height="@dimen/relative_height"
        android:layout_marginTop="80px"
        android:background="?attr/colorOnPrimary"
        >

        <TextView
            style="@style/TextView1"
            android:id="@+id/ys_regular_"
            android:text="@string/dark">

        </TextView>

        <Switch
            android:id="@+id/knob"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rotationX="-8"
            android:visibility="visible"
            tools:ignore="UseSwitchCompatOrMaterialXml">

        </Switch>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lists2"
        android:layout_width="@dimen/relative_width"
        android:layout_height="@dimen/relative_height"
        android:layout_marginTop="0dp"
        android:backgroundTint="?attr/colorOnPrimary">


        <TextView
            android:id="@+id/ys_regular_2"
            style="@style/TextView1"
            android:text="@string/share_The_App" />

        <Button
            android:id="@+id/vector2"
            style="@style/ButtonStyle2"
            app:icon="@drawable/ic_galka" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lists3"
        android:layout_width="@dimen/relative_width"
        android:layout_height="@dimen/relative_height"
        android:backgroundTint="?attr/colorOnPrimary"
        android:layout_marginTop="0dp"

        >

        <Button
            android:id="@+id/vector3"
            style="@style/ButtonStyle2"
            app:icon="@drawable/ic_group" />

        <TextView
            android:id="@+id/ys_regular_3"
            style="@style/TextView1"
            android:text="@string/write_to_support">

        </TextView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lists4"
        android:layout_width="@dimen/relative_width"
        android:layout_height="@dimen/relative_height"
        android:layout_marginTop="0dp"
        android:backgroundTint="?attr/colorOnPrimary">


        <Button
            android:id="@+id/vector4"
            style="@style/ButtonStyle2"
            app:icon="@drawable/ic_ygol" />

        <TextView
            style="@style/TextView1"
            android:id="@+id/ys_regular_4"
            android:text="@string/terms_of_use">

        </TextView>
    </RelativeLayout>

</LinearLayout>

